<?xml version="1.0" encoding="UTF-8"?>
<project
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
		xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.linkedfactory</groupId>
	<artifactId>linkedfactory-parent</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<organization>
		<name>LinkedFactory</name>
	</organization>
	<inceptionYear>2022</inceptionYear>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<komma.version>1.8.0-SNAPSHOT</komma.version>
		<enilink.version>1.6.0-SNAPSHOT</enilink.version>
		<scala.major.version>2.13</scala.major.version>
		<scala.version>2.13.12</scala.version>
		<scala.plugin.version>4.8.1</scala.plugin.version>
		<karaf.tooling.version>4.4.4</karaf.tooling.version>
		<karaf.version>4.4.4</karaf.version>

		<bnd.version>6.3.1</bnd.version>
		<linkedfactory.scm.connection>scm:git:git://github.com:linkedfactory/linkedfactory-pod.git</linkedfactory.scm.connection>
		<linkedfactory.scm.developerConnection>scm:git:git@github.com:elinkedfactory/linkedfactory-pod.git</linkedfactory.scm.developerConnection>
		<linkedfactory.scm.url>https://github.com/linkedfactory/linkedfactory-pod</linkedfactory.scm.url>
	</properties>

	<scm>
		<connection>${linkedfactory.scm.connection}</connection>
		<developerConnection>${linkedfactory.scm.developerConnection}</developerConnection>
		<url>${linkedfactory.scm.url}</url>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>${scala.plugin.version}</version>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
				<executions>
					<execution>
						<id>scala-compile</id>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>bnd-process</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>5.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.12.1</version>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>

				<plugin>
					<groupId>biz.aQute.bnd</groupId>
					<artifactId>bnd-maven-plugin</artifactId>
					<version>${bnd.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.karaf.tooling</groupId>
					<artifactId>karaf-maven-plugin</artifactId>
					<version>${karaf.tooling.version}</version>
					<extensions>true</extensions>
				</plugin>

				<!-- Plugins for copying of Webjars and Java dependencies into the projects. -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
					<executions>
						<execution>
							<id>embed-webjars</id>
							<phase>none</phase>
							<goals>
								<goal>unpack-dependencies</goal>
							</goals>
							<configuration>
								<includeGroupIds>org.webjars, org.webjars.bower,
									org.webjars.npm
								</includeGroupIds>
								<outputDirectory>${project.build.outputDirectory}</outputDirectory>
								<includeScope>provided</includeScope>
								<includes>META-INF/resources/webjars/**</includes>
								<excludes>**/src/**</excludes>
								<overWriteIfNewer>true</overWriteIfNewer>
							</configuration>
						</execution>
						<execution>
							<id>copy-libraries</id>
							<phase>none</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<excludeGroupIds>org.webjars, org.webjars.bower,
									org.webjars.npm
								</excludeGroupIds>
								<stripVersion>true</stripVersion>
								<outputDirectory>${project.build.outputDirectory}/lib</outputDirectory>
								<includeScope>runtime</includeScope>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<archive>
							<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
						</archive>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.16.2</version>
				</plugin>

				<!-- Configuration for Eclipse M2E -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[0.0,)</versionRange>
										<goals>
											<goal>unpack-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute/>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>.keep</exclude>
				</excludes>
			</resource>

			<resource>
				<directory>.</directory>
				<includes>
					<include>plugin.xml</include>
					<include>plugin.properties</include>
				</includes>
			</resource>

			<resource>
				<directory>src/main/webapp</directory>
				<excludes>
					<exclude>.keep</exclude>
				</excludes>
			</resource>
		</resources>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>update-licenses</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.mycila</groupId>
						<artifactId>license-maven-plugin</artifactId>
						<version>4.1</version>
						<configuration>
							<header>releng/license-header.txt</header>
							<properties>
								<license.owners>LinkedFactory contributors</license.owners>
								<license.years>2024</license.years>
							</properties>
							<includes>
								<include>src/*/java/**/*.java</include>
								<include>src/*/scala/**/*.scala</include>
							</includes>
							<skipExistingHeaders>false</skipExistingHeaders>
						</configuration>
						<executions>
							<execution>
								<id>first</id>
								<goals>
									<goal>format</goal>
								</goals>
								<phase>process-sources</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>server</id>
			<modules>
				<module>features/io.github.linkedfactory.feature</module>
				<module>server</module>
			</modules>
		</profile>
		<profile>
			<id>versions</id>
			<modules>
				<module>features</module>
				<module>launch/equinox</module>
			</modules>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>central-snapshots</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub linkedfactory Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/linkedfactory/linkedfactory-pod</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>bundles/io.github.linkedfactory.core</module>
		<module>bundles/io.github.linkedfactory.service</module>
		<module>bundles/io.github.linkedfactory.opcua</module>
	</modules>
</project>
